Fix overflow scroll of code on mobile

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -189,6 +189,7 @@ code {
   background-color: var(--white);
   padding: 1px 10px;
   border-radius: 10px;
+  overflow: scroll;
 }
 
 blockquote {
